adjusted text and config changes